# Zephyrus

./: .gitignore  CMakeLists.txt  README.md
include/: zephyrus.hpp
include/zephyrus/: file-io.hpp  macro.hpp
include/zephyrus/formats/: gdreplay.hpp
src/: file-io.cpp  macro.cpp  zephyrus.cpp
src/formats/: gdreplay.cpp
